manifests/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ihwa
  labels:
    app.kubernetes.io/name: ihwa
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ihwa
  strategy:
    rollingUpdate:
      maxSurge: 50%
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ihwa
    spec:
      enableServiceLinks: false
      containers:
        - name: ihwa
          image: ghcr.io/seankhliao/ihwa
          args:
            - -log.level=debug
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /healthz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
