manifests/httproute.k8s.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ihwa
spec:
  parentRefs:
    - name: default
      namespace: envoy-gateway-system
  hostnames:
    - ihwa.liao.dev
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: ihwa
          port: 80
